# wbcs

./: .gitignore  .travis.yml  CMakeLists.txt  ReadMe.md  azure-pipelines.yml  mkdocs.yml  requirements.txt  sonar-project.properties  wbcs.cpp  wbcs.hpp  wbcs_test.cpp
azure/: steps-mac-sonarqube.yml  steps-mac.yml  steps-ubuntu.yml  steps-win-vs.yml
docs/: .gitignore  Doxyfile  index.md  index_ko_kr.md
scripts/: run-gcov.sh  run-lcov.sh  run-sonar-wrapper.sh  run-sonarqube.sh  setup-ubuntu.sh
